Add live demo link to README

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </div>
     <div class="navigation-bar">
       <div class="logo">
-        <a href="/"><img src="/images/kaduna-img.jpg" alt="kaduna sate" class="logo-icon"></a>
+        <a href="/"><img src="images/kaduna-img.jpg" alt="kaduna sate" class="logo-icon"></a>
       </div>
       <nav>
         <div class="fsnav">
@@ -63,7 +63,7 @@
       <h5>Kaduna State Security Summit 2021</h5>
       <p>Kaduna State is a state in northern Nigeria. The state was created on 27th Many, 1967</p>
       <div class="program-about-logo">
-        <img src="/images/kaduna-img.jpg" alt="kaduna state" class="logo-icon">
+        <img src="images/kaduna-img.jpg" alt="kaduna state" class="logo-icon">
         <p>14th - 17th Oct 2015 | Emmanuel, Nigeria</p>
       </div>    
     </section>
@@ -73,11 +73,11 @@
       <p>Take a look at the last two security summit which took place in Abuja and in Lagos.</p>
       <div class="pass-summit">
       <div class="past-summit-images">
-        <img src="/images/past-summit-2.jpg" alt="Abuja 2020">
+        <img src="images/past-summit-2.jpg" alt="Abuja 2020">
         <div class="centered">Abuja Security summit 2020</div>
       </div>
       <div class="past-summit-images">
-        <img src="/images/past-summit-3.jpg" alt="Lagos 2019">
+        <img src="images/past-summit-3.jpg" alt="Lagos 2019">
         <div class="centered">Lagos Security summit 2019</div>
       </div>
     </div>
@@ -86,17 +86,17 @@
       <div class="footer-partner">
         <h4>Partner</h4>
         <ul class="footer-partner-list">
-          <li><a href="#"><img src="/images/google.png" alt="google"></a></li>
-          <li><a href="#"><img src="/images/fb.webp" alt="microsoft"></a></li>
-          <li><a href="#"><img src="/images/First-Bank.svg" alt="first bank"></a></li>
-          <li><a href="#"><img src="/images/cisco.png" alt="cisco"></a></li>
-          <li><a href="#"><img src="/images/vmware.png" alt="vmware"></a></li>
-          <li><a href="#"><img src="/images/pwc.png" alt="vmware"></a></li>
+          <li><a href="#"><img src="images/google.png" alt="google"></a></li>
+          <li><a href="#"><img src="images/fb.webp" alt="microsoft"></a></li>
+          <li><a href="#"><img src="images/First-Bank.svg" alt="first bank"></a></li>
+          <li><a href="#"><img src="images/cisco.png" alt="cisco"></a></li>
+          <li><a href="#"><img src="images/vmware.png" alt="vmware"></a></li>
+          <li><a href="#"><img src="images/pwc.png" alt="vmware"></a></li>
         </ul>
       </div>
       <div class="footer-foot">
         <div class="footer-logo">
-          <img src="/images/kaduna-img.jpg" alt="logo">
+          <img src="images/kaduna-img.jpg" alt="logo">
         </div>
         <div class="footer-foot-info">
           <h5>2021 Kaduna State Security Summit. Some Rights Reserved.</h5>
