--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="navigation-bar">
       <div class="logo">
-        <a href="/"><img src="/images/kaduna-img.jpg" alt="Kaduna state" class="logo-icon"></a>
+        <a href="/"><img src="images/kaduna-img.jpg" alt="Kaduna state" class="logo-icon"></a>
       </div>
       <nav>
         <div class="fsnav">
@@ -63,7 +63,7 @@
       <div class="program-content">
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/governance.png" alt="governance">
+            <img src="images/governance.png" alt="governance">
           </div>
           <div class="program-content-title">
             <h4>Governance, when liabilities are raising</h4>
@@ -74,7 +74,7 @@
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/frictionless.png" alt="frictionless">
+            <img src="images/frictionless.png" alt="frictionless">
           </div>
           <div class="program-content-title">
             <h4>Makng Security Frictionless</h4>
@@ -85,7 +85,7 @@
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/individual-crime.png" alt="Individual">
+            <img src="images/individual-crime.png" alt="Individual">
           </div>
           <div class="program-content-title">
             <h4>Digital Crimes: Against individual and Society</h4>
@@ -96,7 +96,7 @@
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/cdc.png" alt="cdc">
+            <img src="images/cdc.png" alt="cdc">
           </div>
           <div class="program-content-title">
             <h4>CDC: Exellence in the Security Operations</h4>
@@ -107,7 +107,7 @@
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/resilency.png" alt="resilency">
+            <img src="images/resilency.png" alt="resilency">
           </div>
           <div class="program-content-title">
             <h4>Resiliency for Radically Uncertain Age</h4>
@@ -134,17 +134,17 @@
       <div class="footer-partner">
         <h4>Partner</h4>
         <ul class="footer-partner-list">
-          <li><a href="#"><img src="/images/google.png" alt="google"></a></li>
-          <li><a href="#"><img src="/images/fb.webp" alt="microsoft"></a></li>
-          <li><a href="#"><img src="/images/First-Bank.svg" alt="first bank"></a></li>
-          <li><a href="#"><img src="/images/cisco.png" alt="cisco"></a></li>
-          <li><a href="#"><img src="/images/vmware.png" alt="vmware"></a></li>
-          <li><a href="#"><img src="/images/pwc.png" alt="vmware"></a></li>
+          <li><a href="#"><img src="images/google.png" alt="google"></a></li>
+          <li><a href="#"><img src="images/fb.webp" alt="microsoft"></a></li>
+          <li><a href="#"><img src="images/First-Bank.svg" alt="first bank"></a></li>
+          <li><a href="#"><img src="images/cisco.png" alt="cisco"></a></li>
+          <li><a href="#"><img src="images/vmware.png" alt="vmware"></a></li>
+          <li><a href="#"><img src="images/pwc.png" alt="vmware"></a></li>
         </ul>
       </div>
       <div class="footer-foot">
         <div class="footer-logo">
-          <img src="/images/kaduna-img.jpg" alt="logo">
+          <img src="images/kaduna-img.jpg" alt="logo">
         </div>
         <div class="footer-foot-info">
           <h5>2021 Kaduna State Security Summit. Some Rights Reserved.</h5>
