Checking images on GitHub

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="images/individual-crime.png" alt="Individual">
+            <img src="images/sridhar.jpg" alt="Individual">
           </div>
           <div class="program-content-title">
             <h4>Digital Crimes: Against individual and Society</h4>
