Checking images on GitHub

--- a/about.html
+++ b/about.html
@@ -104,6 +104,6 @@
       </div>
     </footer>
   </div>
-  <script src="/javaScript/scripts.js"></script>
+  <script src="javaScript/scripts.js"></script>
 </body>
 </html>
