--- a/index.html
+++ b/index.html
@@ -153,6 +153,6 @@
     </footer>
 
   </div>
-  <script src="/javaScript/scripts.js"></script>
+  <script src="javaScript/scripts.js"></script>
 </body>
 </html>
